fix(_layout.scss): allow notifications horizontal scrolling
To fix the case where notification actions, like archive or mute, are hidden by the notification thread section, allow horizontal scrolling for overflow content.

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -50,7 +50,7 @@ body {
 .flex-main {
   flex: 1;
   min-width: 0;
-  overflow-x: hidden;
+  overflow-x: scroll;
   padding-left: 0;
 }
 
